[Light] Update light definitions to accept per-range lumens values; in future, consider what the upgrade path will be
[Lights] Textured tintable lights

[Lights] Transientize paint2 for now because JSON cannot serialize it at the moment

[Lights] readResolve textured paint

[Lights] Rework soft lighting to use black-background lights; alpha had some wierd artifacts as near the edge had a sharp darkness

[Lights] Go back to trying alpha-based; it is better using pegtop soft lighting (as is used in GIMP), but still gets a bit dark

[Lights] Be more explicit that no light colour means no tinting

[Lights] Support negative per-range lumens

[Lights] Make darkness a separate type from normal lights

[Light] Some handy todo notes

[Lights] More TODOs

[Lights] Even more TODO

[Lights] Add TODO note to LightSource about range ordering

[Lights] Clean up Light; make a guarantee that the subranges are stored in increasing radius order

[Lights] FIXUP Document the sorting guarantee

[Lights] Add ideas for how to upgrade old lights

[Lights] Change to a more aggressively cropped light; the one thing I don't like about the texture is how most of it is wasted space, and even what is there is so transparent it's invisible

[Lights] In LightSource, separate make the public getLightList() return an unmodifiable view of the private list; have a new private method take care of the lazy initialization; TODO Avoid the need for lazy initialization - we already have readResolve(), now we just need to avoid unnecessary use of the default constructor in case that is actually still used for serialization somehow

[Lights] Revert BufferedImagePool to use screen-compatible images; make DrawableNormalizedTexturePaint to also use screen-compatible images

[Lights] Remove more unnecessary removals from Illuminator

[Lights] Parse lumens levels in sights just like lights

[Lights] Support setting sight as darkness (only effective if personal light is added)

[Lights] Switch to my own radial gradi