@@ -15,39 +15,117 @@
 package net.rptools.maptool.model;
 
 import com.google.protobuf.StringValue;
+import java.awt.Color;
 import java.awt.geom.Area;
 import java.io.IOException;
+import java.io.Serial;
+import java.io.Serializable;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import net.rptools.lib.FileUtil;
+import net.rptools.lib.MD5Key;
+import net.rptools.maptool.model.drawing.DrawableLightPaint;
+import net.rptools.maptool.model.drawing.DrawablePaint;
 import net.rptools.maptool.server.proto.LightSourceDto;
-import net.rptools.maptool.server.proto.ShapeTypeDto;
 import org.apache.commons.lang.math.NumberUtils;
 import org.jetbrains.annotations.NotNull;
 
-public class LightSource implements Comparable<LightSource> {
+import javax.annotation.Nullable;
+
+public class LightSource implements Comparable<LightSource>, Serializable {
   public enum Type {
     NORMAL,
     AURA
   }
 
-  private List<Light> lightList;
+  /**
+   * All lights belonging to the light source. These are sorted according to their lumens values.
+   */
+  private final List<Light> lightList;
   private String name;
   private GUID id;
-  private Type type = Type.NORMAL;
-  private ShapeType shapeType = ShapeType.CIRCLE;
-  private int lumens = 0;
-  private boolean scaleWithToken = false;
+  private Type type;
+  private boolean scaleWithToken;
+  private @Nullable MD5Key textureAssetId;  // TODO Support non-asset "textures", specifically "flat" or "attenuated"/"fade".
+  private final transient Map<Color, DrawablePaint> tintedPaints = new HashMap<>();
 
+  // Lumens are now in the individual Lights. This field is only here for backwards compatibility
+  // and should not otherwise be used.
+  @Deprecated
+  private int lumens = Integer.MIN_VALUE;
+
+  /**
+   * Constructs a personal light source.
+   *
+   * <p>Since a personal light source is directly attached to a specific sight type, they do not
+   * need (or have) names and GUIDs.
+   */
   public LightSource() {
-    // for serialization
+    this(null, null, Type.NORMAL, false, Collections.emptyList());
   }
 
+  /**
+   * Constructs a non-personal light source.
+   *
+   * <p>These light sources are referenced both by name and GUID, and thus need both. A new GUID
+   * will be created automatically.
+   *
+   * @param name The name of the light source.
+   */
   public LightSource(String name) {
-    id = new GUID();
+    this(new GUID(), name, Type.NORMAL, false, Collections.emptyList());
+  }
+
+  private LightSource(@Nullable GUID id, @Nullable String name, Type type, boolean scaleWithToken, Collection<Light> lights) {
+    this.id = id;
     this.name = name;
+    this.type = type;
+    this.scaleWithToken = scaleWithToken;
+
+    this.lightList = new LinkedList<>();
+    this.lightList.addAll(lights);
+    this.lightList.sort(Comparator.comparingDouble(Light::getRadius));
+  }
+
+  @Serial
+  private Object readResolve() {
+    // Old LightSources will have a lumens value that needs to be pushed into Light.
+    if (lumens != Integer.MIN_VALUE) {
+      if (lightList != null) {
+        for (int i = 0; i < lightList.size(); ++i) {
+          final var light = lightList.get(i);
+          lightList.set(i, new Light(
+                  light.getShape(),
+                  light.getFacingOffset(),
+                  light.getRadius(),
+                  light.getArcAngle(),
+                  light.getColor(),
+                  this.lumens == 0 ? 100 : this.lumens,
+                  light.isGM(),
+                  light.isOwnerOnly()
+          ));
+        }
+      }
+      // Make sure we don't try to convert the lumens again in the future.
+      this.lumens = Integer.MIN_VALUE;
+    }
+
+    // Rather than touching up the current object, we'll create a replacement that is definitely
+    // initialized.
+    return new LightSource(
+            this.id,
+            this.name,
+            Objects.requireNonNullElse(this.type, Type.NORMAL),
+            this.scaleWithToken,
+            Objects.requireNonNullElse(this.lightList, Collections.emptyList())
+    );
   }
 
   @Override
@@ -60,7 +138,7 @@ public class LightSource implements Comparable<LightSource> {
 
   public double getMaxRange() {
     double range = 0;
-    for (Light light : getLightList()) {
+    for (Light light : lightList) {
       range = Math.max(range, light.getRadius());
     }
     return range;
@@ -88,19 +166,20 @@ public class LightSource implements Comparable<LightSource> {
   }
 
   public void add(Light source) {
-    getLightList().add(source);
+    lightList.add(source);
+    lightList.sort(Comparator.comparingDouble(Light::getRadius));
   }
 
   public void remove(Light source) {
-    getLightList().remove(source);
+    lightList.remove(source);
   }
 
-  /** @return the lightList of the LightSource */
+  /**
+   * @return the lights belonging to this LightSource. The list is sorted from small lights to large
+   *     lights
+   */
   public List<Light> getLightList() {
-    if (lightList == null) {
-      lightList = new LinkedList<Light>();
-    }
-    return lightList;
+    return Collections.unmodifiableList(lightList);
   }
 
   public Type getType() {
@@ -111,20 +190,25 @@ public class LightSource implements Comparable<LightSource> {
     this.type = type;
   }
 
-  public void setShapeType(ShapeType type) {
-    this.shapeType = type;
+  public @Nullable MD5Key getTextureAssetId() {
+    return textureAssetId;
   }
 
-  public ShapeType getShapeType() {
-    return shapeType != null ? shapeType : ShapeType.CIRCLE;
+  public void setTextureAssetId(@Nullable MD5Key assetId) {
+    if (!Objects.equals(textureAssetId, assetId)) {
+      // TODO Make sure it gets loading right away.
+      textureAssetId = assetId;
+      tintedPaints.clear();
+    }
   }
 
-  public void setLumens(int lumens) {
-    this.lumens = lumens;
-  }
+  public DrawablePaint getPaint(Light light) {
+    if (light.getColor() == null) {
+      return null;
+    }
 
-  public int getLumens() {
-    return lumens;
+    return tintedPaints.computeIfAbsent(
+        light.getColor(), tint -> new DrawableLightPaint(textureAssetId, tint));
   }
 
   public void setScaleWithToken(boolean scaleWithToken) {
@@ -138,12 +222,15 @@ public class LightSource implements Comparable<LightSource> {
   /*
    * Area for a single light, subtracting any previous lights
    */
+  // TODO This is only used in ZoneView.getDrawableAuras(). We should update that to function
+  //  similarly to the illumination case, where it does a single pass to construct disjoint sets
+  //  from overlapping ranges.
   public Area getArea(Token token, Zone zone, Light light) {
     Area area = light.getArea(token, zone, scaleWithToken);
     // TODO: This seems horribly inefficient
     // Subtract out the lights that are previously defined
-    for (int i = getLightList().indexOf(light) - 1; i >= 0; i--) {
-      Light lessLight = getLightList().get(i);
+    for (int i = lightList.indexOf(light) - 1; i >= 0; i--) {
+      Light lessLight = lightList.get(i);
       area.subtract(lessLight.getArea(token, zone, scaleWithToken));
     }
     return area;
@@ -152,8 +239,7 @@ public class LightSource implements Comparable<LightSource> {
   /* Area for all lights combined */
   public Area getArea(Token token, Zone zone) {
     Area area = new Area();
-
-    for (Light light : getLightList()) {
+    for (Light light : lightList) {
       area.add(light.getArea(token, zone, isScaleWithToken()));
     }
 
@@ -170,16 +256,6 @@ public class LightSource implements Comparable<LightSource> {
   @Override
   public String toString() {
     return name;
-  }
-
-  private Object readResolve() {
-    if (type == null) {
-      type = Type.NORMAL;
-    }
-    if (lightList == null) {
-      lightList = new LinkedList<>();
-    }
-    return this;
   }
 
   /*
@@ -199,21 +275,18 @@ public class LightSource implements Comparable<LightSource> {
   }
 
   public static LightSource fromDto(LightSourceDto dto) {
-    var lightSource = new LightSource();
-    lightSource.lightList =
-        dto.getLightsList().stream().map(l -> Light.fromDto(l)).collect(Collectors.toList());
-    lightSource.name = dto.hasName() ? dto.getName().getValue() : null;
-    lightSource.id = dto.hasId() ? GUID.valueOf(dto.getId().getValue()) : null;
-    lightSource.type = Type.valueOf(dto.getType().name());
-    lightSource.shapeType = ShapeType.valueOf(dto.getShapeType().name());
-    lightSource.lumens = dto.getLumens();
-    lightSource.scaleWithToken = dto.getScaleWithToken();
-    return lightSource;
+    return new LightSource(
+            dto.hasId() ? GUID.valueOf(dto.getId().getValue()) : null,
+            dto.hasName() ? dto.getName().getValue() : null,
+            Type.valueOf(dto.getType().name()),
+            dto.getScaleWithToken(),
+            dto.getLightsList().stream().map(Light::fromDto).toList()
+    );
   }
 
   public LightSourceDto toDto() {
     var dto = LightSourceDto.newBuilder();
-    dto.addAllLights(lightList.stream().map(l -> l.toDto()).collect(Collectors.toList()));
+    dto.addAllLights(lightList.stream().map(Light::toDto).collect(Collectors.toList()));
     if (name != null) {
       dto.setName(StringValue.of(name));
     }
@@ -221,10 +294,6 @@ public class LightSource implements Comparable<LightSource> {
       dto.setId(StringValue.of(id.toString()));
     }
     dto.setType(LightSourceDto.LightTypeDto.valueOf(type.name()));
-    // default shape type
-    if (shapeType == null) shapeType = ShapeType.CIRCLE;
-    dto.setShapeType(ShapeTypeDto.valueOf(shapeType.name()));
-    dto.setLumens(lumens);
     dto.setScaleWithToken(scaleWithToken);
     return dto.build();
   }
